Fri Dec  4 11:10:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUmakefile: Added GNUAlertPanel.m
	* GNUAlertPanel.m: Outline of framework for handling alert panels.

Thu Dec 3 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSView.m resizeSubviewsWithOldSize: check whether view has ever been 
	rotated (per 4.2 docs).
	* NSStringDrawing.m sizeWithAttributes: fix minor bug introduced while
	optimizing tab calc.
	* NSCell.m: drawInteriorWithFrame: minor optimization

Tue Dec  3  7:00:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSApplication.m: Fixed include for GNUServicesManager.h
	Implemented all the modal loop methods (untested).
	* NSApplication.h: Added 'session' ivar for modal loop support.

Tue Dec  1 21:00:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSApplication.m: Moved services code out to GNUServiceManager.m
	* NSPasteboard.m: Moved services code out to GNUServiceManager.m
	* NSWorkspace.m: Moved services code out to GNUServiceManager.m
	* GNUServicesManager.m: All services stuff in here - now full
	implementation of services functions.
	* GNUServicesManager.h: Header for services manager class.
	* GNUmakefile: Added services manager stuff
	* Tools/set_show_service.m: New tool to enable/disable services.
	* Tools/GNUmakefile: Added set_show_service.m
	* Tools/dummy.m: More dummy backend functions.
	* Tools/make_services.m: Update for new directory structure.

Tue Dec 1 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSWindow.m rename windowWithNumber to _windowWithTag per backend
	* NSEvent.m call to windowWithNumber.

Tue Dec  1 09:58:20 1998  Adam Fedor  <fedor@ultra.doc.com>

	* Source/NSWorkspace.m ([NSWorkspace -findApplications]): Check
	for data before calling deserializer.

Tue Dec  1 10:25:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSApplication.m: Fixed auto-enable of services menu.
	* NSMenu.m: Rewrote auto-enable code to work as specified in docs.