@@ -1,3 +1,7 @@
+Sat Dec 5 1998  Felipe A. Rodriguez  <far@ix.netcom.com>
+
+	* NSView.m resizeWithOldSuperviewSize:  fully implement. 
+
 Fri Dec  4 11:10:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* GNUmakefile: Added GNUAlertPanel.m
